--- a/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
+++ b/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
@@ -15,12 +15,16 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Engine\AspNetMigrator.Engine.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.TryConvertProjectConverter\AspNetMigrator.TryConvertProjectConverter.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.DefaultPackageUpdater\AspNetMigrator.DefaultPackageUpdater.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.DefaultSourceUpdater\AspNetMigrator.DefaultSourceUpdater.csproj" />
   </ItemGroup>
 
 </Project>
