Add initial implementations of TryConvertProjectConverter and DefaultPackageUpdater
The package updated doesn't update transitive depnendecies and could be improved.
This implementation works as a first rough solution, though.

--- a/src/AspNetMigrator.TryConvertProjectConverter/AspNetMigrator.TryConvertProjectConverter.csproj
+++ b/src/AspNetMigrator.TryConvertProjectConverter/AspNetMigrator.TryConvertProjectConverter.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>AspNetMigrator.Engine</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="tools\try-convert.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Engine\AspNetMigrator.Engine.csproj" />
