--- a/src/AspNetMigrator.DefaultPackageUpdater/AspNetMigrator.DefaultPackageUpdater.csproj
+++ b/src/AspNetMigrator.DefaultPackageUpdater/AspNetMigrator.DefaultPackageUpdater.csproj
@@ -1,12 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>AspNetMigrator.Engine</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="PackageMap.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Engine\AspNetMigrator.Engine.csproj" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="16.7.0" />
+  </ItemGroup>
+  
 </Project>
