Add initial source updater implementation

--- a/src/AspNetMigrator.Engine/AspNetMigrator.Engine.csproj
+++ b/src/AspNetMigrator.Engine/AspNetMigrator.Engine.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetMigrator.MSBuild\AspNetMigrator.MSBuild.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
