--- a/src/AspNetMigrator.DefaultPackageUpdater/AspNetMigrator.DefaultPackageUpdater.csproj
+++ b/src/AspNetMigrator.DefaultPackageUpdater/AspNetMigrator.DefaultPackageUpdater.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="16.7.0" />
+    <PackageReference Include="Microsoft.Build" Version="16.7.0" ExcludeAssets="runtime" />
   </ItemGroup>
   
 </Project>
