--- a/src/AspNetMigrator.TryConvertProjectConverter/AspNetMigrator.TryConvertProjectConverter.csproj
+++ b/src/AspNetMigrator.TryConvertProjectConverter/AspNetMigrator.TryConvertProjectConverter.csproj
@@ -13,6 +13,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Engine\AspNetMigrator.Engine.csproj" />
+    <PackageReference Include="Microsoft.Build" Version="16.7.0" ExcludeAssets="runtime" />
   </ItemGroup>
 
 </Project>
