--- a/test/TestProject/TestProject.csproj
+++ b/test/TestProject/TestProject.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Razor" Version="3.2.7" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="3.2.7" />
     <PackageReference Include="Microsoft.Owin" Version="4.1.1" />
   </ItemGroup>
 
