Add style cop analyzers and fix resulting issues

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,6 +2,7 @@
   <!-- Common properties regarding language version, CA rulesets, output paths, etc. -->
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
+    <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)\rules.ruleset</CodeAnalysisRuleSet>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
 
