--- a/.editorconfig
+++ b/.editorconfig
@@ -67,7 +67,7 @@ dotnet_naming_symbols.non_private_static_fields.required_modifiers = static
 
 dotnet_naming_style.non_private_static_field_style.capitalization = pascal_case
 
-# Non-private readonly fields are PascalCase
+# Readonly fields are PascalCase
 dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.symbols = non_private_readonly_fields
 dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.style = non_private_readonly_field_style
@@ -87,6 +87,15 @@ dotnet_naming_symbols.constants.applicable_kinds = field, local
 dotnet_naming_symbols.constants.required_modifiers = const
 
 dotnet_naming_style.constant_style.capitalization = pascal_case
+
+# Readonly fields are PascalCase
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case_rule.severity   = suggestion
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case_rule.symbols    = static_readonly_fields
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case_rule.style      = pascal_case_style
+
+dotnet_naming_symbols.static_readonly_fields.applicable_kinds           = field
+dotnet_naming_symbols.static_readonly_fields.applicable_accessibilities = public, internal, protected_internal, protected, private_protected, private
+dotnet_naming_symbols.static_readonly_fields.required_modifiers         = static, readonly
 
 # Static fields are camelCase and start with s_
 dotnet_naming_rule.static_fields_should_be_camel_case.severity = suggestion
