--- a/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/AspNetMigrator.Analyzers.CodeFixes.csproj
+++ b/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/AspNetMigrator.Analyzers.CodeFixes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,14 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Analyzers\AspNetMigrator.Analyzers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Templates\*.cs" />
     <Compile Update="CodeFixResources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="CodeFixResources.resx" />
+    <EmbeddedResource Include="Templates\*.*" />
     <EmbeddedResource Update="CodeFixResources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="CodeFixResources.Designer.cs" />
   </ItemGroup>
 
