Load analyzers and code fixers w/ extension providers instead of Autofac

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -12,9 +12,7 @@
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
   },
-  "SourceUpdaterStepOptions": {
-    "SourceUpdaterPath": "SourceUpdaters"
-  },
+  "SourceUpdaterPath": "SourceUpdaters",
   "TemplateInserterStepOptions": {
     "TemplatePath": "Templates"
   },
