Update ConfigUpdater to get settings from extensions

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -1,12 +1,10 @@
 ﻿{
-  "ConfigUpdaterStepOptions": {
-    "ConfigFilePaths": [
-      "app.config",
-      "web.config",
-      "Views\\web.config"
-    ],
-    "ConfigUpdaterPath": "ConfigUpdaters"
-  },
+  "ConfigFilePaths": [
+    "app.config",
+    "web.config",
+    "Views\\web.config"
+  ],
+  "ConfigUpdaterPath": "ConfigUpdaters",
   "PackageUpdaterStepOptions": {
     "LogRestoreOutput": false,
     "PackageMapPath": "PackageMaps",
