--- a/src/AspNetMigrator.ConfigUpdater/AspNetMigrator.ConfigUpdater.csproj
+++ b/src/AspNetMigrator.ConfigUpdater/AspNetMigrator.ConfigUpdater.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
