Move updater options back into their own config sections

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -1,16 +1,20 @@
 ﻿{
-  "ConfigFilePaths": [
-    "app.config",
-    "web.config",
-    "Views\\web.config"
-  ],
-  "ConfigUpdaterPath": "ConfigUpdaters",
+  "ConfigUpdaterOptions": {
+    "ConfigFilePaths": [
+      "app.config",
+      "web.config",
+      "Views\\web.config"
+    ],
+    "ConfigUpdaterPath": "ConfigUpdaters"
+  },
   "PackageUpdaterStepOptions": {
     "LogRestoreOutput": false,
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
   },
-  "SourceUpdaterPath": "SourceUpdaters",
+  "SourceUpdaterOptions": {
+    "SourceUpdaterPath": "SourceUpdaters"
+  },
   "TemplateInserterStepOptions": {
     "TemplatePath": "Templates"
   },
