Update PackageUpdater to get package maps from extensions

--- a/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
+++ b/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
@@ -13,6 +13,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
   </ItemGroup>
   
   <ItemGroup>
