Make small improvements to PackageMapProvider logging

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -7,7 +7,7 @@
     ],
     "ConfigUpdaterPath": "ConfigUpdaters"
   },
-  "PackageUpdaterStepOptions": {
+  "PackageUpdaterOptions": {
     "LogRestoreOutput": false,
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
