Update template inserter step to get templates from extensions

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -15,7 +15,7 @@
   "SourceUpdaterOptions": {
     "SourceUpdaterPath": "SourceUpdaters"
   },
-  "TemplateInserterStepOptions": {
+  "TemplateInserterOptions": {
     "TemplatePath": "Templates"
   },
   "TryConvertProjectConverterStepOptions": {
