--- a/src/AspNetMigrator.TemplateUpdater/AspNetMigrator.TemplateUpdater.csproj
+++ b/src/AspNetMigrator.TemplateUpdater/AspNetMigrator.TemplateUpdater.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
