Updates based on PR feedback

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConfigUpdaterOptions": {
+  "ConfigUpdater": {
     "ConfigFilePaths": [
       "app.config",
       "web.config",
@@ -7,18 +7,18 @@
     ],
     "ConfigUpdaterPath": "ConfigUpdaters"
   },
-  "PackageUpdaterOptions": {
+  "PackageUpdater": {
     "LogRestoreOutput": false,
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
   },
-  "SourceUpdaterOptions": {
+  "SourceUpdater": {
     "SourceUpdaterPath": "SourceUpdaters"
   },
-  "TemplateInserterOptions": {
+  "TemplateInserter": {
     "TemplatePath": "Templates"
   },
-  "TryConvertProjectConverterStepOptions": {
+  "TryConvertProjectConverter": {
     "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
   }
 }
