Add the ability to specify extensions from config/env vars

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -20,5 +20,6 @@
   },
   "TryConvertProjectConverter": {
     "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
-  }
+  },
+  "UpgradeAssistantExtensionPaths": ""
 }
