--- a/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
+++ b/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
@@ -16,10 +16,10 @@
   </ItemGroup>
   
   <ItemGroup>
+    <!-- NuGet package versions need to match those used by MSBuild, so load them from the local MSBuild install -->
+    <PackageReference Include="NuGet.ProjectModel" Version="5.8.0" ExcludeAssets="runtime" />
+    
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-    <PackageReference Include="NuGet.Frameworks" Version="5.8.0" />
-    <PackageReference Include="NuGet.ProjectModel" Version="5.8.0" />
-    <PackageReference Include="NuGet.Protocol" Version="5.8.0" />
     <PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
