Add the ability to load migration behaviors from extensions (#12)
* Reverse the order commands are registered in the console app

This way, commands are listed in the logical order of operation

* Add initial IExtensionProvider implementations

* Load analyzers and code fixers w/ extension providers instead of Autofac

* Update ConfigUpdater to get settings from extensions

* Move updater options back into their own config sections

* Add back options objects

* Update `AggregateExtensionProvider.GetOptions` to merge options

* Update PackageUpdater to get package maps from extensions

* Make small improvements to PackageMapProvider logging

* Update template inserter step to get templates from extensions

* Misc code cleanup based on code analysis

* Add -extension command line option

* Improve logging around extension loading and probing

* Fix aggregate extension provider to ignore null/empty config values

* Updates based on PR feedback

* Add the ability to specify extensions from config/env vars

* Add some logging to the aggregate extension provider

* Updates based on PR feedback

* Make sure package maps are only loaded once

* End package analysis if we find the package in a map

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConfigUpdaterStepOptions": {
+  "ConfigUpdater": {
     "ConfigFilePaths": [
       "app.config",
       "web.config",
@@ -7,18 +7,19 @@
     ],
     "ConfigUpdaterPath": "ConfigUpdaters"
   },
-  "PackageUpdaterStepOptions": {
+  "PackageUpdater": {
     "LogRestoreOutput": false,
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
   },
-  "SourceUpdaterStepOptions": {
+  "SourceUpdater": {
     "SourceUpdaterPath": "SourceUpdaters"
   },
-  "TemplateInserterStepOptions": {
+  "TemplateInserter": {
     "TemplatePath": "Templates"
   },
-  "TryConvertProjectConverterStepOptions": {
+  "TryConvertProjectConverter": {
     "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
-  }
+  },
+  "UpgradeAssistantExtensionPaths": ""
 }
