--- a/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
+++ b/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
@@ -21,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="3.1.0" />
@@ -48,6 +47,7 @@
     <ProjectReference Include="..\Analyzers\AspNetMigrator.Analyzers.CodeFixes\AspNetMigrator.Analyzers.CodeFixes.csproj" />
     <ProjectReference Include="..\AspNetMigrator.ConfigUpdater\AspNetMigrator.ConfigUpdater.csproj" />
     <ProjectReference Include="..\ConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
   </ItemGroup>
 
   <!-- Copy analyzers and code fixers into \SourceUpdaters since that's where the app will probe for them. -->
