Add initial reporting from portability service
This adds some infrastructure to gather the referenced APIs and submit that to the portability service. This does not attempt to categorize them, but rather to see what we can do with what's currently available. There is an initial implementation of checking if an API is available, which we'll want to update to react to things such as if a user is going to move to Linux or stay on Windows.

--- a/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
+++ b/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
@@ -34,6 +34,7 @@
     <ProjectReference Include="..\AspNetMigrator.BackupUpdater\AspNetMigrator.BackupUpdater.csproj" />
     <ProjectReference Include="..\AspNetMigrator.Migrator\AspNetMigrator.Migrator.csproj" />
     <ProjectReference Include="..\AspNetMigrator.MSBuild\AspNetMigrator.MSBuild.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Portability\AspNetMigrator.Portability.csproj" />
     <ProjectReference Include="..\AspNetMigrator.Solution\AspNetMigrator.Solution.csproj" />
     <ProjectReference Include="..\AspNetMigrator.TryConvertUpdater\AspNetMigrator.TryConvertUpdater.csproj" />
     <ProjectReference Include="..\AspNetMigrator.PackageUpdater\AspNetMigrator.PackageUpdater.csproj" />
@@ -48,6 +49,10 @@
     <ProjectReference Include="..\AspNetMigrator.ConfigUpdater\AspNetMigrator.ConfigUpdater.csproj" />
     <ProjectReference Include="..\ConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters.csproj" />
     <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Portability\" />
   </ItemGroup>
 
   <!-- Copy analyzers and code fixers into \SourceUpdaters since that's where the app will probe for them. -->
