--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -21,5 +21,9 @@
   "TryConvertProjectConverter": {
     "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
   },
-  "UpgradeAssistantExtensionPaths": ""
+  "UpgradeAssistantExtensionPaths": "",
+  "Portability": {
+    "ServiceEndpoint": "https://portability.dot.net"
+  }
+
 }
