Update action to deploy nuget tool
This sets up a new feed for the upgrade-assistant tool and updates the
feed to use the new name.

--- a/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
+++ b/src/AspNetMigrator.Console/AspNetMigrator.ConsoleApp.csproj
@@ -4,8 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>try-migrate</ToolCommandName>
-    <PackageId>try-migrate</PackageId>
+    <ToolCommandName>upgrade-assistant</ToolCommandName>
+    <PackageId>upgrade-assistant</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
