--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: build
 
 on:
   push:
@@ -44,4 +44,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
           name: tools
-          path: tools/*
+          path: $GITHUB_WORKSPACE/tools
+
