--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: build
 
 on:
   push:
@@ -24,8 +24,6 @@ jobs:
         dotnet-version: 3.1.x
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.7.2
-      with:
-        useGlobalJson: true
     - name: Update version
       run: |
         dotnet tool install --global GitVersion.Tool
@@ -44,4 +42,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
           name: tools
-          path: tools/*
+          path: $GITHUB_WORKSPACE/tools
+
