Fix upload tools

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,5 +42,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
           name: tools
-          path: $GITHUB_WORKSPACE/tools
+          path: tools/*
 
