Initial setup for plumbing through API component bucketization

--- a/src/AspNetMigrator.Portability/AspNetMigrator.Portability.csproj
+++ b/src/AspNetMigrator.Portability/AspNetMigrator.Portability.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Config\PortabilityComponentConfiguration.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
