--- a/src/AspNetMigrator.Migrator/AspNetMigrator.Migrator.csproj
+++ b/src/AspNetMigrator.Migrator/AspNetMigrator.Migrator.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>AspNetMigratior</RootNamespace>
+    <RootNamespace>AspNetMigrator</RootNamespace>
   </PropertyGroup>
   
   <ItemGroup>
