Add analyzer for System.Deployment usage

--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -9,7 +9,7 @@
   },
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps",
-    "MigrationAnalyzersPackageSource": "https://trymigrate.blob.core.windows.net/feed/index.json"
+    "MigrationAnalyzersPackageSource": "https://upgradeassistant.blob.core.windows.net/feed/index.json"
   },
   "SourceUpdater": {
     "SourceUpdaterPath": "SourceUpdaters"
