--- a/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/AspNetMigrator.Analyzers.CodeFixes.csproj
+++ b/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/AspNetMigrator.Analyzers.CodeFixes.csproj
@@ -1,21 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>AspNetMigrator.Analyzers</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <ProjectReference Include="..\AspNetMigrator.Analyzers\AspNetMigrator.Analyzers.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Remove="Templates\*.cs" />
     <Compile Update="CodeFixResources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="CodeFixResources.resx" />
     <EmbeddedResource Include="Templates\*.*" />
     <EmbeddedResource Update="CodeFixResources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="CodeFixResources.Designer.cs" />
   </ItemGroup>
-
 </Project>
