--- a/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
+++ b/src/AspNetMigrator.PackageUpdater/AspNetMigrator.PackageUpdater.csproj
@@ -1,29 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>AspNetMigrator.PackageUpdater</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="PackageMaps\*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  
   <ItemGroup>
     <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
     <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
   </ItemGroup>
-  
   <ItemGroup>
     <!-- NuGet package versions need to match those used by MSBuild, so load them from the local MSBuild install -->
-    <PackageReference Include="NuGet.ProjectModel" Version="5.8.0" ExcludeAssets="runtime" />
-    
-    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-    <PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
-    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
-    <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
+    <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="System.IO.FileSystem.Primitives" />
+    <PackageReference Include="System.Linq.Async" />
+    <PackageReference Include="System.Text.Encoding.Extensions" />
   </ItemGroup>
-  
 </Project>
