--- a/tests/AspNetMigrator.Migrator.Test/AspNetMigrator.Migrator.Test.csproj
+++ b/tests/AspNetMigrator.Migrator.Test/AspNetMigrator.Migrator.Test.csproj
@@ -1,23 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>AspNetMigrator.Test</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-    <PackageReference Include="Moq" Version="4.15.2" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Moq" />
+    <PackageReference Include="MSTest.TestAdapter" />
+    <PackageReference Include="MSTest.TestFramework" />
+    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="NSubstitute" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\src\AspNetMigrator.Migrator\AspNetMigrator.Migrator.csproj" />
     <ProjectReference Include="..\AspNetMigrator.TestHelpers\AspNetMigrator.TestHelpers.csproj" />
   </ItemGroup>
-
 </Project>
