--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,7 +25,7 @@
     <PackageVersion Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options.DataAnnotations" Version="5.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageVersion Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="1.16.30" />
+    <PackageVersion Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="2.3.2262-g94fae01e" />
     <PackageVersion Include="Moq" Version="4.16.0" />
     <PackageVersion Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageVersion Include="MSTest.TestFramework" Version="2.1.2" />
@@ -34,7 +34,7 @@
     <PackageVersion Include="Serilog" Version="2.10.0" />
     <PackageVersion Include="Serilog.Extensions.Hosting" Version="3.1.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageVersion Include="Serilog.Sinks.File" Version="4.1.0" />    
+    <PackageVersion Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.321" />
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
     <PackageVersion Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
